--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fishapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
