--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "pg": "^8.11.5",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
